bump to latest bbmap version, change java run time version (11-->17) for some simd comptability